--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,31 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Capacitor
+ios/
+android/
+.capacitor/
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Optional eslint cache
+.eslintcache
+
+# MCP sensitive configurations (if any local overrides)
+mcp-config.local.json
+
+# Supabase local development
+.supabase/
